--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -24,6 +24,6 @@ jobs:
           GOOS=linux GOARCH=amd64 go build -o app .
 
       - name: build docker images
-        if: github.event_name= 'push'
+        if: github.event_name == 'push'
         run: |
           docker build -t myapp:latest . 
